--- a/src/i18n/translation/en.json
+++ b/src/i18n/translation/en.json
@@ -34,7 +34,7 @@
         ],
         "skills": [
             {
-                "planet red": "red planet"
+                "red planet": "red planet"
             },
             {
                 "tecsSlideRowOne": {
@@ -43,8 +43,77 @@
                     "descritionHTML": "Hypertext Markup Language which is the structure of a web page"
                 },
                 "tecsSlideRowTwo": {
-                     "descritionJS": "javaScript is a programming language that drives the web"
+                    "descritionJS": "JavaScript is a programming language that drives the web",
+                    "descritionReact": "A javaScript library that is used for building user interface",
+                    "descritionGit": "It is the most widely used open source version control system in the world today!"
                 }
+            }
+        ],
+        "projects": [
+            {
+                "rocky planet": "rocky planet",
+                "projects and certificates": "That are some projects and academic certificates",
+                "personal projects": "Personal projects",
+                "certificates": "Certificates"
+            },
+            {
+                "react calculator": {
+                    "title": "React Calculator",
+                    "descrition": "Design of a calculator made with react, which has a dark and light theme"
+                },
+                "weather project": {
+                    "descrition": "Project that shows the details of the climate of some region using the OpenWeatherMap Api"
+                },
+                "lol pages": {
+                    "descrition": "Reimagining the League Of Legends game page"
+                },
+                "personal portfolio": {
+                    "title": "Personal Portfolio",
+                    "descrition": "My first personal portfolio"
+                }
+            },
+            {
+                "programming logic": {
+                     "title": "Programming Logic",
+                     "descrition": "Complete Logic Programming Course"
+                },
+                 "web css": {
+                      "title": "Web Css",
+                      "descrition": "Concepts covered in the course:2d and 3d animations · Stylization · Pseudo-class and Pseudo-elements · CSS Grid Layout · Flexbox · Responsibility · Good practices and convention in Css"
+                 },
+                 "react fundamentals": {
+                      "title": "React Fundamentals",
+                      "descrition": "Course of the first steps in the library"
+                 },
+                 "basic hooks": {
+                     "title": "Basic React Hooks",
+                     "descrition": "Learn a little about the main hooks in react"
+                 },
+                 "js advanced": {
+                     "title": "Advanced Javascript",
+                     "descrition": "Advanced Concepts Covered:Variables, Scope, and Data Types in JavaScript · Prototype Orientation · Functions and List Manipulation · Promises and Asynchrony"
+                 }
+            }
+            
+        ],
+        "contact" : [
+            {"get in touch": "Get in Touch"},
+            {
+                "boxs informations": {
+                    "location": "Location"
+                },
+                "send message": {
+                    "your name": "Your Name...",
+                    "your e-mail": "Your E-mail...",
+                    "your message": "Your Message...",
+                    "send message": "Send Message"
+                }
+            }
+        ],
+        "footer":[
+            {
+                "my logo": "my logo",
+                "copyright": "All rights reserved. Site developed by RichGuilherme"
             }
         ]
     }
