--- a/src/i18n/translation/en.json
+++ b/src/i18n/translation/en.json
@@ -11,7 +11,7 @@
         "banner": [
             {
                 "welcome": "Welcome to my portfolio!",
-                "I'm": "Hi! i'm Richard,",
+                "I'm": "Hi! I'm Richard,",
                 "web developer": "Web Developer",
                 "front-end developer": "Front-End Developer",
                 "icon astronaut with rocket": "astronaut in a rocket",
