rerf: ajust ortografia

--- a/src/i18n/translation/ptBR.json
+++ b/src/i18n/translation/ptBR.json
@@ -23,7 +23,7 @@
             {"title": "Sobre Mim"},
             {
                 "education": "Educação",
-                "formation": "Tecnologo em Análise e Desenvolvimento de Sistema"
+                "formation": "Tecnólogo em Análise e Desenvolvimento de Sistema"
             },
             {
                 "experiences": "EXP Profissonal",
@@ -31,7 +31,7 @@
             },
             {
                 "hobbies": "Hobbies",
-                "my hobbies": "Games, Músicas, Series/Animes, Acadêmia e Programação são coisas do meu dia a dia"
+                "my hobbies": "Games, músicas, séries/animes, acadêmia e programação são coisas do meu dia a dia"
             }
         ],
         "skills": [
