style: ajust in the text about me

--- a/src/i18n/translation/en.json
+++ b/src/i18n/translation/en.json
@@ -27,7 +27,7 @@
             },
             {
                 "experiences": "Work EXP",
-                "professional experiences": "No professional experiences..."
+                "professional experiences": "I have not yet worked in any company, however, I have already developed several projects in the area so having, practical application..."
             },
             {
                 "hobbies": "Hobbies",
