--- a/src/i18n/translation/ptBR.json
+++ b/src/i18n/translation/ptBR.json
@@ -27,7 +27,7 @@
             },
             {
                 "experiences": "EXP Profissonal",
-                "professional experiences": "Sem experiências profissonal... "
+                "professional experiences": "Ainda não trabalhei em nenhuma empresa, porém, já desenvolvi vários projetos na área assim tendo, aplicação prática..."
             },
             {
                 "hobbies": "Hobbies",
