fix: ajust text

--- a/src/i18n/translation/ptBR.json
+++ b/src/i18n/translation/ptBR.json
@@ -64,7 +64,7 @@
                     "descrition": "Projeto de uma calculadora feita com react, que possui um thema dark e light"
                 },
                 "weather project": {
-                    "descrition": "Projeto que mostra os detalhed do clima de alguma região usando a Api OpenWeatherMap"
+                    "descrition": "Projeto que mostra os detalhe do clima de alguma região usando a Api OpenWeatherMap"
                 },
                 "lol pages": {
                     "descrition": "Reimaginação da página do jogo League Of Legends"
